force-app/main/default/objects/Application__c/fields/Admission_Officer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admission_Officer_Notes__c</fullName>
    <label>Admission Officer Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>