force-app/main/default/objects/Application__c/fields/Is_International__c.field-meta.xml
<CustomField>
    <fullName>Is_International__c</fullName>
    <defaultValue>false</defaultValue>
    <formula>TEXT(Applicant__r.Applicant_Type__c) = "International"</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Is International</label>
    <type>Checkbox</type>
</CustomField>