force-app/main/default/objects/Application__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>ProgramApplications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>