force-app/main/default/objects/Application__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <summarizedField>Score__c</summarizedField>
    <summaryForeignKey>Application__c</summaryForeignKey>
    <summaryOperation>avg</summaryOperation>
    <type>Summary</type>
</CustomField>