force-app/main/default/objects/Application__c/validationRules/Decision_After_Submission.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Decision_Date__c)) &amp;&amp; Decision_Date__c &lt; Submission_Date__c</errorConditionFormula>
    <errorDisplayField>Decision_Date__c</errorDisplayField>
    <errorMessage>Decision Date must be after Submission Date.</errorMessage>
</ValidationRule>