force-app/main/default/objects/Application__c/validationRules/Future_Submission_Date.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>Submission_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Submission_Date__c</errorDisplayField>
    <errorMessage>Submission Date cannot be in the future.</errorMessage>
</ValidationRule>