force-app/main/default/objects/Application__c/validationRules/Locked_Approved_Status.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status__c), "Approved") &amp;&amp; ISPICKVAL(Status__c, "Rejected")</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot change an Approved application to Rejected.</errorMessage>
</ValidationRule>