force-app/main/default/objects/Application__c/validationRules/Program_Capacity_Check.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, "Approved") &amp;&amp; Program__r.Capacity__c = 0</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Program is full.</errorMessage>
</ValidationRule>